--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,13 @@
   --homebuying-bg: url('./mediafiles/Home page/Counter number/bg01/bg02.png');
   --assistance-decorative-bg: url('./mediaFiles/Home page/Counter number/assistance_bg_decorative.png');
   --Pinnacle-in-Numbers-bg: url('./mediaFiles/Home page/Counter number/bg01/bg 01.png');
+  --The-Pride-Mohali-bg: url('./mediafiles/Home page/Counter number/ThePrideMohali.webp');
+  --Crafted-for-Top-bg: url('./mediaFiles/Home page/Counter number/bg01/bg 01.png');
+  --signature_residance-r-BG: url('./mediaFiles/Home page/Counter number/signature_residence_mBG.png');
+  --paper-crashes-BG: url('./mediaFiles/Home page/Counter number/slider 01145/template.png');
+  --Buying-Ultralaxuries-bg-Decorative: url('./mediaFiles/Home page/Counter number/Decorative_items.png');
+  --Buying-Ultralaxuries-bg-DecorativeTwo: url('././mediaFiles/Home page/Counter number/Hero section and logos/Frame 2095586641 1.webp')
+
 }
 
 
@@ -25,4 +32,18 @@
 
 .scrollbar-none::-webkit-scrollbar {
   display: none;
+}
+
+@layer components {
+  .grid-border {
+    position: relative;
+  }
+  .grid-border:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    top: 10%; /* Center the border vertically (100-80)/2 */
+    right: 0;
+    height: 80%;
+    border-right: 1px solid #CFCFCF;
+  }
 }
