--- a/src/input.css
+++ b/src/input.css
@@ -6,6 +6,7 @@
 }
 
 :root {
+    --main-blue: #003253;
   --homebuying-bg: url('./mediafiles/Home page/Counter number/bg01/bg02.png');
   --assistance-decorative-bg: url('./mediaFiles/Home page/Counter number/assistance_bg_decorative.png');
   --Pinnacle-in-Numbers-bg: url('./mediaFiles/Home page/Counter number/bg01/bg 01.png');
@@ -18,12 +19,15 @@
 
 }
 
+body{
+    font-family: "Jost", sans-serif;
+}
 
-/* Example: make disabled button black & non-clickable */
+
 .swiper-button-disabled {
-    color: #A3A3A4;       /* color change */
-    cursor: not-allowed; /* make non-clickable */
-    pointer-events: none; /* optional, prevents clicks */
+    color: #A3A3A4;       
+    cursor: not-allowed; 
+    pointer-events: none; 
 }
 
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
@@ -41,9 +45,55 @@
   .grid-border:not(:last-child)::after {
     content: '';
     position: absolute;
-    top: 10%; /* Center the border vertically (100-80)/2 */
+    top: 10%; 
     right: 0;
     height: 80%;
     border-right: 1px solid #CFCFCF;
+  }
+}
+
+.TestimonialSwiper {
+  width: 100% !important;
+  max-width: 100vw !important;
+}
+.swiper-wrapper {
+  width: 100% !important;
+}
+
+/* Scroll bar custom */
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 2.5625px;            /* scrollbar thickness */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #F0F0F0;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #D5D5D5;           /* scrollbar color */
+  border-radius: 9999px;
+  height: 428.2275px;         /* FIXED scrollbar thumb height */
+}
+
+/* Center scrollbar thumb */
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  margin-top: calc((565px - 428.2275px) / 2);
+  margin-bottom: calc((565px - 428.2275px) / 2);
+}
+
+
+/* <!-- Tailwind animation using style --> */
+
+.gradientBGAssistanceBTN {
+    animation: ScaleEffect 1s infinite;
+}
+
+@keyframes ScaleEffect {
+    0%, 100% {
+    box-shadow: 0 0 0px rgba(255,194,103,0.5), 0 0 0px rgba(153,117,62,0.5);
+  }
+  50% {
+    box-shadow: 0 0 20px rgba(255,194,103,0.5), 0 0 20px rgba(153,117,62,0.5);
   }
 }
