--- a/src/input.css
+++ b/src/input.css
@@ -18,7 +18,8 @@
   --Buying-Ultralaxuries-bg-DecorativeTwo: url('./mediaFiles/Home page/Counter number/Hero section and logos/Frame 2095586641 1.webp');
   --decorativeBGTestimonial: url('./mediaFiles/Home page/Counter number/Banner & Testimonial/decorative_bg.png');
   --background-decorative-map: url('./mediaFiles/Location/bg-decorative-desktop.svg');
-  --consultat-decorative-bg: url('./mediaFiles/Location/consultant_decorative_bg.svg')
+  --consultat-decorative-bg: url('./mediaFiles/Location/consultant_decorative_bg.svg');
+  --paper-crash-decorative-bg: url('./mediaFiles/Price/decorative-bg-price.webp')
 }
 
 body{
@@ -149,4 +150,8 @@ body{
   align-items: center;
   justify-content: center;
   font-size: '12px';
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
